--- a/NYU_Coursera/1_Course_Guided_Tour_ML_Finance/Bank_failure.ipynb
+++ b/NYU_Coursera/1_Course_Guided_Tour_ML_Finance/Bank_failure.ipynb
@@ -85,8 +85,8 @@
    "outputs": [],
    "source": [
     "# token expires every 30 min\n",
-    "COURSERA_TOKEN = \"CmY0ZAOa4wtrv0Bv\"# the key provided to the Student under his/her email on submission page\n",
-    "COURSERA_EMAIL = \"aayushmandhyan@hotmail.co.uk\"# the email"
+    "COURSERA_TOKEN = \""# the key provided to the Student under his/her email on submission page\n",
+    "COURSERA_EMAIL = \""# the email"
    ]
   },
   {
