--- a/NYU_Coursera/1_Course_Guided_Tour_ML_Finance/Tobit_regression.ipynb
+++ b/NYU_Coursera/1_Course_Guided_Tour_ML_Finance/Tobit_regression.ipynb
@@ -89,8 +89,8 @@
    },
    "outputs": [],
    "source": [
-    "COURSERA_TOKEN = \"emfUCdRicyE2cNgE\"# the key provided to the Student under his/her email on submission page\n",
-    "COURSERA_EMAIL = \"aayushmandhyan@hotmail.co.uk\"# the email"
+    "COURSERA_TOKEN = \"\"# the key provided to the Student under his/her email on submission page\n",
+    "COURSERA_EMAIL = \"\"# the email"
    ]
   },
   {
